# NeoGlot

./: .gitignore  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  prompt.txt  skills-lock.json  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: 01-architecture.md  02-database-schema.md  03-translation-workflow.md  04-game-engines.md  05-ui-structure.md  CHANGELOG.md  PROGRESS.md
reviews/: 00-SYNTHESE.md  01-DazedMTLTool.md  02-MTool.md  03-rpgmtranslate-qt.md  04-SLR-Translator.md  05-WolfTL.md  06-UberWolf.md  07-Tauri-Plugins.md  08-Additional-Libraries.md
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: db_commands.rs  detect.rs  glossary.rs  mod.rs  parse.rs  translate.rs  wolf.rs  write.rs
src-tauri/src/commands/engines/: formatter.rs  mod.rs  validation.rs
src-tauri/src/commands/engines/rpgm_classic/: decrypt.rs  extract.rs  formatter.rs  mod.rs  validation.rs
src-tauri/src/commands/engines/rpgmv/: extract.rs  formatter.rs  inject.rs  mod.rs  validation.rs
src-tauri/src/commands/engines/wolf/: extract.rs  formatter.rs  inject.rs  mod.rs  validation.rs
src/components/: AppShell.vue  AppSidebar.vue  OllamaStatus.vue
src/composables/: useOllama.ts  useProjects.ts  (+2 more)
tasks/: T01-install-plugins.md  T02-app-shell-routing.md  T03-rust-commands.md  T04-projects-module.md  T05-rpgmv-extraction.md  T06-translation-engine.md  T07-rpgmv-reinjection.md  T08-glossary-module.md  T09-wolf-rpg.md  T10-rpgm-classic.md
(+17 files in other folders)
